# zeroclaw

./: .cursorrules  .gitignore  Cargo.toml  TASKS.md  deploy-115.sh  deploy.sh  fix_inner_route.patch  fix_paginated.rs  fix_schema_conflicts.py  refactor_tools.py  run_lldb.sh  temp_test_log.txt  test-config.toml  test_regex  唤星开发规范.md  微信接入方案-WeChatPadPro.md
.cargo/: config.toml
.github/workflows/: main-branch-flow.md  pub-release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
clients/android/: ANDROID-TOOLS-MVP.md  BUILD.md  INTEGRATION.md  build.gradle.kts
clients/desktop/: .gitignore  CONTRIBUTING.md  convert.py  design_preview.html  design_preview_apple_tech.html  design_preview_light.html  dev.sh  fix_marketplace.py  fix_sop.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-out.css  test_theme.html  test_variant.css  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
clients/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.ios.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/icons/backup-old-icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs  test.rs
clients/desktop/src-tauri/src/commands/: auth.rs  channels.rs  cron.rs  files.rs  hasn.rs  marketplace.rs  mod.rs  models.rs  zeroclaw.rs
clients/desktop/src-tauri/src/engine/: bridge.rs  mod.rs
clients/desktop/src-tauri/src/services/: hasn_ws_router.rs  mod.rs
clients/desktop/src-tauri/src/sidecar/: config.rs  constants.rs  manager.rs  mod.rs  models.rs  monitor.rs  onboard.rs
clients/desktop/src-tauri/src/tray/: events.rs  menu.rs  mod.rs
clients/desktop/src-tauri/src/utils/: device.rs
clients/desktop/src-tauri/workspace-scaffold/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  config.toml.template
crates/hasn-client-core/: Cargo.toml
crates/hasn-client-core/src/: error.rs  lib.rs
crates/hasn-client-core/src/api/: client.rs  mod.rs
crates/hasn-client-core/src/auth/: mod.rs
crates/hasn-client-core/src/db/: contacts.rs  conversations.rs  messages.rs  mod.rs  schema.rs
crates/hasn-client-core/src/model/: auth.rs  contact.rs  conversation.rs  message.rs  mod.rs  ws_event.rs
crates/hasn-client-core/src/net/: mod.rs
crates/hasn-client-core/src/protocol/: mod.rs
crates/hasn-client-core/src/sync/: engine.rs  mod.rs
crates/hasn-client-core/src/ws/: connection.rs  mod.rs
crates/huanxing-agent-factory/: Cargo.toml
crates/huanxing-agent-factory/src/: engine.rs  lib.rs  market_api.rs  scaffold.rs  types.rs
crates/huanxing-agent-factory/src/scaffold/agent/: AGENTS.md  IDENTITY.md  SOUL.md  config.toml.template
crates/huanxing-agent-factory/src/scaffold/global/: config.toml.template
crates/huanxing-agent-factory/src/scaffold/owner/: BOOTSTRAP.md  MEMORY.md  config.toml.template
docs/: SUMMARY.md  TTS-VOICE-PLAN.md  ci-map.md  release-process.md  重构方案-多租户抽象层.md
docs/contributing/: upstream-merge-guide.md
scripts/: release.sh  test-local.sh
server-config/: .env.example  .gitignore  API_KEYS_GUIDE.md  FIRECRAWL_DEPLOY_GUIDE.md  TEST_RESULTS.md  config.toml  deploy_firecrawl.sh  test_search_providers.sh  uninstall_firecrawl.sh
server-config/admin/: AGENTS.md  HEARTBEAT.md  MEMORY.md  USER.md  config.toml
server-config/admin-scaffold/: IDENTITY.md  MEMORY.md  SOUL.md  config.toml
server-config/guardian/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  RELATIONS.md  SOUL.md  TOOLS.md  USER.md  config.toml
server-config/guardian-scaffold/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  config.toml
src/: lib.rs  main.rs  migration.rs  multimodal.rs  util.rs
src/agent/: agent.rs  loop_.rs  prompt.rs
src/channels/: context_resolver.rs  lark.rs  mod.rs  napcat.rs  qq.rs  session_backend.rs  session_sqlite.rs  tts.rs  wechat_pad.rs
src/config/: mod.rs  schema.rs
src/cron/: mod.rs  scheduler.rs
src/daemon/: mod.rs
src/gateway/: api.rs  mod.rs  ws.rs
src/heartbeat/: engine.rs
src/huanxing/: agent_bridge.rs  api_agents.rs  api_client.rs  api_sessions.rs  bootstrap.rs  channel_registry.rs  config.rs  db.rs  device_fingerprint.rs  doc_tools.rs  hasn_api.rs  hasn_connector.rs  hasn_invoke.rs  hasn_tools.rs  hub_sync.rs  hx_image_gen.rs  hx_web_search.rs  hx_ws.rs  mod.rs  multi_tenant_resolver.rs  permissions.rs  register.rs  registry.rs  router.rs  secret_tools.rs  skill_market_tools.rs  sop_api.rs  sync.rs  templates.rs  tenant.rs  tenant_heartbeat.rs  tools.rs  tts_dashscope.rs  voice.rs  voice_hook.rs  ws_observer.rs
src/memory/: consolidation.rs  knowledge_capture.rs  knowledge_cross.rs  knowledge_suggest.rs  mod.rs
src/onboard/: wizard.rs
src/providers/: anthropic.rs  compatible.rs  mod.rs  openai.rs
src/security/: canary_guard.rs  mod.rs  policy.rs  roles.rs  (+1 more)
tests/: huanxing_feature_coverage.rs  test_parse.rs
(+353 files in other folders)
