[package]
name = "hasn-client-core"
version = "0.2.0"
edition = "2021"
description = "HASN client core library - cross-platform Rust SDK"

[dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket (替代 rust_socketio)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# 本地数据库 (aligned with zeroclaw workspace: 0.37)
rusqlite = { version = "0.37", features = ["bundled"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 工具
uuid = { version = "1", features = ["v4"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
url = "2"
