[package]
name = "huanxing-agent-factory"
version = "0.1.0"
edition = "2021"
description = "唤星 Agent 工厂 — 统一的 Agent 创建、模板安装引擎"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"
tokio = { version = "1", features = ["fs", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }
anyhow = "1"
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
rusqlite = { version = "0.37", features = ["bundled"] }
fs_extra = "1.3"
flate2 = { version = "1.0", features = ["rust_backend"] }
