[package]
name = "huanxing-desktop"
version = "0.1.0"
edition = "2021"
description = "唤星AI桌面客户端 — 基于 ZeroClaw 的 AI Agent + HASN IM"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
which = "7"
libc = "0.2"
toml = "0.8"

# 唤星 HASN SDK (workspace crate)
hasn-client-core = { path = "../../../crates/hasn-client-core" }
