[package]
name = "huanxing-desktop"
version = "0.1.0"
edition = "2021"
description = "唤星AI桌面客户端 — 基于 ZeroClaw 的 AI Agent + HASN IM"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rusqlite = "0.37"
which = "7"
libc = "0.2"
toml = "0.8"
toml_edit = "0.22"
zip = "0.6"
bytes = "1.5"
base64 = "0.22"
hostname = "0.4"
serde_yaml = "0.9"
tempfile = "3"

# 唤星 HASN SDK (workspace crate)
hasn-client-core = { path = "../../../crates/hasn-client-core" }
