[package]
name = "huanxing-desktop"
version = "0.1.0"
edition = "2021"
description = "唤星AI客户端 — 基于 ZeroClaw 的 AI Agent + HASN IM（桌面端 + 移动端）"
rust-version = "1.77"

[lib]
name = "huanxing_desktop"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rusqlite = "0.37"
which = "7"
libc = "0.2"
toml = "0.8"
toml_edit = "0.22"
zip = "0.6"
bytes = "1.5"
base64 = "0.22"
hostname = "0.4"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
tempfile = "3"
huanxing-agent-factory = { version = "0.1.0", path = "../../../crates/huanxing-agent-factory" }
qrcode = { version = "0.14.1", features = ["svg"] }

# ── 移动端嵌入 ZeroClaw 引擎 ──
# 裁剪 features：仅启用 huanxing（含 HASN），排除 hardware/matrix/wasm/peripherals
# 桌面端不需要（使用 sidecar 进程）
# 注意：package = "zeroclawlabs" 是根 crate 的 package name，lib name = "zeroclaw"
zeroclaw = { package = "zeroclawlabs", path = "../../..", default-features = false, features = ["huanxing"], optional = true }

[features]
default = []
# Tauri 在编译移动端时自动设置 `mobile` cfg flag
# 此 feature 引入 ZeroClaw 库用于 in-process 引擎
mobile = ["zeroclaw"]
